--- a/code/products/style.css
+++ b/code/products/style.css
@@ -1,11 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Teko&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Roboto:wght@100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Smooch&family=Space+Mono&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Smooch&display=swap');
 
 :root {
-    --first-font:'Roboto', sans-serif;
+    --first-font:'Space Mono', monospace;
     --second-font:'Teko', sans-serif;
     --third-font:'Smooch', cursive;
+    --first-color:black;
+}
+
+h2 {
+    font-family: var(--second-font);
+    font-size: 35px;
 }
 
 body {
@@ -14,12 +20,20 @@ body {
     padding: 0;
 }
 
-img {
-    width: 115;
-    height: 70;
-}
-
-nav {
+header nav {
     display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    border-bottom:2px solid grey ;
 }
 
+a {
+    font-family: var(--first-font);
+    margin-right: 50px;
+    text-decoration: none;
+    color: var(--first-color);
+}
+
+.contact {
+    margin: 0;
+}
