--- a/code/products/style.css
+++ b/code/products/style.css
@@ -25,7 +25,8 @@ body {
 header nav {
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: space-between;
+    margin: 0 50px;
     border-bottom:2px solid grey ;
 }
 
