--- a/code/products/css/style.css
+++ b/code/products/css/style.css
@@ -102,7 +102,11 @@ header nav {
 /* FOOTER STUFF */
 
 footer {
-    font-family: var(--first-font);
     background-color: #343434;
     color: white;
+}
+
+footer h3 {
+font-family: var(--second-font);
+font-size: 25px;
 }
