--- a/code/home/css/style.css
+++ b/code/home/css/style.css
@@ -9,6 +9,16 @@
     --first-color:black;
 }
 
+    /* NAV STUFF */
+
+b {
+  font-size:18px; 
+}
+
+p {
+  font-family: var(--first-color); 
+}
+
 h2 {
     font-family: var(--second-font);
     font-size: 35px;
@@ -23,11 +33,12 @@ body {
 header nav {
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
-    border-bottom:2px solid grey ;
+    justify-content: space-between;
+    margin: 0 160px;
+    height: 50px;
 }
 
-a {
+ header nav a {
     font-family: var(--first-font);
     margin-right: 50px;
     text-decoration: none;
@@ -36,4 +47,33 @@ a {
 
 .contact {
     margin: 0;
+}
+
+    /* TITLE & DESCRIPTION SECTION */
+
+.description{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 600px;
+    background-image: url(../icons/home-bg.jpg);
+    background-size: cover;
+    color:white;
+}
+.des-child1, .des-child2 {
+    display: flex;
+    justify-content: center;
+    height: 75px; 
+}
+.title {
+   font-family: var(--second-font);
+   font-size: 50px;
+}
+
+.title-des {
+    font-family: var(--third-font);
+    font-size: 30px;
+ 
 }
