--- a/code/products/css/style.css
+++ b/code/products/css/style.css
@@ -58,7 +58,7 @@ header nav {
     justify-content: center;
     width: 100%;
     height: 600px;
-    background-image: url(../icons/home-bg.jpg);
+    background-image: url(https://ibb.co/Ks4VSHn);
     background-size: cover;
     color:white;
 }
@@ -99,6 +99,13 @@ header nav {
     height: 558px ;
 }
 
+/* contact section  */
+.text-center {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+  
 /* FOOTER STUFF */
 
 footer  {
@@ -113,4 +120,9 @@ footer  {
 footer section p {
 font-family: var(--second-font);
 font-size: 25px;
+}
+
+section #contact .container .row {
+    display: flex;
+    justify-content: center;
 }
